--- a/google-homepage.html
+++ b/google-homepage.html
@@ -1,1 +1,15 @@
-<!--Code for homepage goes here.<!-->
+<!DOCTYPE html>
+<html lang="en">
+    <!--General Webpage Information-->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Google</title>
+        <link rel="shortcut icon" type="image/jpg" href="../icon.jpg">
+        <!--Link to custom CSS-->
+        <link href="../style.css" rel="stylesheet">
+    </head>
+    <body>
+
+    </body>
+</html>
