--- a/google-homepage.html
+++ b/google-homepage.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Google</title>
-        <link rel="shortcut icon" type="image/jpg" href="../icon.jpg">
+        <link rel="shortcut icon" type="image/jpeg" href="../icon.jpeg">
         <!--Link to custom CSS-->
         <link href="../style.css" rel="stylesheet">
     </head>
