Edit README, Add popup menu, Add CSS, Add JS

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <!--Link to custom CSS-->
         <link href="../style.css" rel="stylesheet">
+        <!--Link to custom JS-->
+        <link href="../script.js">
     </head>
     <body>
         <!--Header-->
@@ -33,8 +35,28 @@
                     <a href="#" id="login"><div></div></a>
                 </div>
             </nav>
-            <div id="popup" style="display: none;">
-                <!--popup menu items here-->
+            <!--Popup Menu for "myMenu"-->
+            <div id="popup" class="popup" style="display: none;">
+                <a href="#">
+                    <div class="first sprite"></div>
+                    <div class="icon_text">Tribute</div>
+                </a>
+                <a href="#">
+                    <div class="second sprite"></div>
+                    <div class="icon_text">Form</div>
+                </a>
+                <a href="#">
+                    <div class="third sprite"></div>
+                    <div class="icon_text">Landing</div>
+                </a>
+                <a href="#">
+                    <div class="fourth sprite"></div>
+                    <div class="icon_text">Documentation</div>
+                </a>
+                <a href="#">
+                    <div class="fifth sprite"></div>
+                    <div class="icon_text">Portfolio</div>
+                </a>
             </div>
         </header>
         <!--Main body-->
@@ -42,10 +64,6 @@
             <!--Google Logo-->
             <div>
                 <img src="../img/google.svg" alt="Google">
-            </div>
-            <!--Darkmode Selector-->
-            <div>
-                <img src="../img/darkmode.svg" alt="Darkmode">
             </div>
             <div>
                 <!--Google Search bar-->
@@ -60,24 +78,31 @@
                 </form>
             </div>
         </main>
+        <!--Darkmode Selector-->
+        <div onclick="darkMode()">
+            <span class="switch gsprite"></span>
+            <!--<img src="../img/darkmode.svg" alt="Darkmode">-->
+        </div>
         <!--Footer-->
         <footer>
-            <!--Links on bottom left of page-->
-            <div>
-                <a href="#">Advertising</a>
-                <a href="#">Business</a>
-                <a href="#">How Search Works</a>
-            </div>
-            <!--Link on bottom center of page-->
-            <div>
-                <a href="#">Carbon neutral since 2007</a>
-            </div>
-            <!--Links on bottom right of page-->
-            <div>
-                <a href="#">Privacy</a>
-                <a href="#">Terms</a>
-                <a href="#">Settings</a>
-            </div>
+            <nav>
+                <!--Links on bottom left of page-->
+                <div>
+                    <a href="#">Advertising</a>
+                    <a href="#">Business</a>
+                    <a href="#">How Search Works</a>
+                </div>
+                <!--Link on bottom center of page-->
+                <div>
+                    <a href="#">Carbon neutral since 2007</a>
+                </div>
+                <!--Links on bottom right of page-->
+                <div>
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Settings</a>
+                </div>
+            </nav>
         </footer>
     </body>
 </html>
