--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <!--Link to custom CSS-->
         <link href="../style.css" rel="stylesheet">
-        <!--Link to custom JS-->
-        <link href="../script.js">
     </head>
     <body>
         <!--Header-->
@@ -31,11 +29,11 @@
                 <div>
                     <a href="#">Gmail</a>
                     <a href="#">Images</a>
-                    <a href="#"><div onclick="myMenu()" class="menu gsprite"></div></a>
-                    <a href="#" id="login"><div></div></a>
+                    <a href="#"><div onclick="googleApps()" class="menu gsprite"></div></a>
+                    <a href="#" id="login"></a>
                 </div>
             </nav>
-            <!--Popup Menu for "myMenu"-->
+            <!--Popup Menu for "googleApps"-->
             <div id="popup" class="popup" style="display: none;">
                 <a href="#">
                     <div class="first sprite"></div>
@@ -62,8 +60,10 @@
         <!--Main body-->
         <main>
             <!--Google Logo-->
-            <div>
+            <div class="row">
                 <img src="../img/google.svg" alt="Google">
+                <!--Darkmode Selector-->
+                <div onclick="darkMode()" class="switch dark-icon"></div>
             </div>
             <div>
                 <!--Google Search bar-->
@@ -78,31 +78,24 @@
                 </form>
             </div>
         </main>
-        <!--Darkmode Selector-->
-        <div onclick="darkMode()">
-            <span class="switch gsprite"></span>
-            <!--<img src="../img/darkmode.svg" alt="Darkmode">-->
-        </div>
         <!--Footer-->
         <footer>
             <nav>
                 <!--Links on bottom left of page-->
-                <div>
+                <div class="left">
                     <a href="#">Advertising</a>
                     <a href="#">Business</a>
                     <a href="#">How Search Works</a>
                 </div>
-                <!--Link on bottom center of page-->
-                <div>
-                    <a href="#">Carbon neutral since 2007</a>
-                </div>
                 <!--Links on bottom right of page-->
-                <div>
+                <div class="right">
                     <a href="#">Privacy</a>
                     <a href="#">Terms</a>
                     <a href="#">Settings</a>
                 </div>
             </nav>
         </footer>
+    <!--Link to custom JS-->
+    <script type="text/javascript" src="../script.js"></script>
     </body>
 </html>
