Updated links in HTML file to CSS & JS files and img folder

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <!--Title that shows up in tab-->
         <title>Google</title>
         <!--Adds icon in front of title-->
-        <link rel="shortcut icon" type="image/jpeg" href="../img/shortcut.jpeg">
+        <link rel="shortcut icon" type="image/jpeg" href="img/shortcut.jpeg">
         <!--Fonts-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <!--Link to custom CSS-->
-        <link href="../style.css" rel="stylesheet" type="text/css">
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <!--Header-->
@@ -35,7 +35,7 @@
         <main>
             <!--Google Logo-->
             <div class="google-logo">
-                <img src="../img/google.svg" alt="Google">
+                <img src="img/google.svg" alt="Google">
                 <!--Darkmode Selector-->
                 <div onclick="darkMode()" class="switch darkmode"></div>
             </div>
@@ -71,6 +71,6 @@
             </div>
         </footer>
     <!--Link to custom JS-->
-    <script type="text/javascript" src="../script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
